# relevant_crawler

./: .gitignore  LICENSE  README.md  genie_docs_ai_filter.md  pyproject.toml  requirements.txt
examples/: databricks_genie_seeds.txt
src/ai_scraper/: __init__.py  ai.py  cli.py  crawler.py  fetcher.py  models.py  output.py
